# openbabel

./: CMakeLists.txt  README.md  libinchi_sourcefiles.cmake  obenv.bat  sourcefiles.cmake  version
data/: SMARTS_InteLigand.txt  aromatic.h  aromatic.txt  atomtyp.h  atomtyp.txt  bin2hex.pl  bondtyp.h  bondtyp.txt  element.h  element.txt  isotope-small.txt  isotope.h  isotope.txt  logp.txt  mr.txt  patterns.txt  phmodel.txt  phmodeldata.h  psa.txt  resdata.h  resdata.txt  torlib.h  torlib.txt  types.h  types.txt
include/: inchi_api.h
include/inchi/: ichicomp.h
include/openbabel/: atom.h  babelconfig.h  base.h  bitvec.h  bond.h  bondtyper.h  canon.h  chains.h  chiral.h  data.h  dlhandler.h  fingerprint.h  forcefield.h  generic.h  grid.h  groupcontrib.h  internalcoord.h  kinetics.h  lineend.h  matrix.h  mol.h  molchrg.h  obconversion.h  oberror.h  obiter.h  obmolecformat.h  obutil.h  parsmart.h  patty.h  phmodel.h  pluginiter.h  rand.h  reaction.h  residue.h  ring.h  rotamer.h  rotor.h  typer.h  xml.h
scripts/: openbabel-java.i  openbabel-perl.i  openbabel-python.i  openbabel-ruby.i
scripts/java/: CharPtrLess.java  DataOrigin.java  FastSearch.java  FastSearchIndexer.java  FptIndex.java  FptIndexHeader.java  OBAngle.java  OBAngleData.java  OBAromaticTyper.java  OBAtom.java  OBAtomAtomIter.java  OBAtomBondIter.java  OBAtomTyper.java  OBBase.java  OBBitVec.java  OBBond.java  OBChainsParser.java  OBChiralData.java  OBCommentData.java  OBConformerData.java  OBConversion.java  OBElement.java  OBElementTable.java  OBError.java  OBExternalBond.java  OBExternalBondData.java  OBFFCalculation.java  OBFFParameter.java  OBFingerprint.java  OBForceField.java  OBFormat.java  OBGenericData.java  OBGlobalDataBase.java  OBGroupContrib.java  OBIsotopeTable.java  OBLogP.java  OBMR.java  OBMessageHandler.java  OBMol.java  OBMolAngleIter.java  (+103 more)
scripts/perl/: Changes  MANIFEST  META.yml  Makefile.PL  OpenBabel.pm  README  openbabel_perl.cpp
scripts/python/: Examples.html  MANIFEST  README  openbabel.py  pybel.py  pybelapi.html  setup.py
scripts/ruby/: README  extconf.rb  openbabel_ruby.cpp
src/: atom.cpp  base.cpp  bitvec.cpp  bond.cpp  bondtyper.cpp  canon.cpp  chains.cpp  chiral.cpp  data.cpp  dlhandler_unix.cpp  dlhandler_win32.cpp  fingerprint.cpp  forcefield.cpp  generic.cpp  grid.cpp  groupcontrib.cpp  kekulize.cpp  matrix.cpp  mol.cpp  molchrg.cpp  obconversion.cpp  oberror.cpp  obiter.cpp  obutil.cpp  parsmart.cpp  patty.cpp  phmodel.cpp  rand.cpp  residue.cpp  ring.cpp  rotamer.cpp  rotor.cpp  snprintf.c  strncasecmp.c  tokenst.cpp  transform.cpp  typer.cpp  zipstream.h  zipstreamimpl.h
src/GUI/: OBGUI.cpp  OBGUI.h  optswx.cpp  optswx.h  selformats.h  stdwx.cpp  stdwx.h
src/fingerprints/: finger2.cpp  finger3.cpp
src/forcefields/: forcefieldghemical.cpp  forcefieldghemical.h
src/formats/: APIInterface.cpp  CSRformat.cpp  PQSformat.cpp  acrformat.cpp  alchemyformat.cpp  amberformat.cpp  balstformat.cpp  bgfformat.cpp  boxformat.cpp  cacaoformat.cpp  cacheformat.cpp  cansmilesformat.cpp  carformat.cpp  cccformat.cpp  chem3dformat.cpp  chemdrawcdx.cpp  chemdrawct.cpp  chemtoolformat.cpp  cifformat.cpp  copyformat.cpp  crkformat.cpp  cssrformat.cpp  dmolformat.cpp  exampleformat.cpp  fastaformat.cpp  fastsearchformat.cpp  fchkformat.cpp  featformat.cpp  fhformat.cpp  fingerprintformat.cpp  freefracformat.cpp  gamessformat.cpp  gaussformat.cpp  getinchi.cpp  ghemicalformat.cpp  gromos96format.cpp  hinformat.cpp  inchiformat.cpp  jaguarformat.cpp  mdlformat.cpp  (+27 more)
src/math/: matrix3x3.cpp  vector3.cpp
test/: README  aromatest.cpp  aromatic.pl  atom.cpp  bond.cpp  cansmi.cpp  cml.sh  conversion.cpp  data.cpp  formalcharge.cpp  format.cpp  formula.cpp  inchi.pl  inchi2.pl  inchiwrite.cpp  internalcoord.cpp  invalidsmarts.cpp  invalidsmiles.cpp  iterators.cpp  logp_psa.cpp  math.cpp  mol.cpp  residue.cpp  ringtest.cpp  roundtrip.cpp  smartstest.cpp  smilesmatch.cpp  test-set.sh  unitcell.cpp  wrapper.sh
test/cmltest/: 3d.head.sdf  cs2a.cml  (+9 more)
tools/: CMakeLists.txt  README  babel.cpp  obchiral.cpp  obenergy.cpp  obfit.cpp  obgrep.cpp  obminimize.cpp  obprop.cpp  obrotamer.cpp  obrotate.cpp
(+39 files in other folders)
